--- a/start.html
+++ b/start.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background: black url('pics/eye.jpg') no-repeat center/cover;
+            background: black url('eye.jpg') no-repeat center/cover;
             color: white;
             font-family: verdana;
         }
