--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background: #4b4bb2 url('pics/back.jpg') no-repeat center/cover;
+            background: #4b4bb2 url('back.jpg') no-repeat center/cover;
             color: white;
         }
 
