--- a/back.html
+++ b/back.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background: #4b4bb2 url('pics/backr.jpg') no-repeat center/cover;
+            background: #4b4bb2 url('backr.jpg') no-repeat center/cover;
             color: white;
         }
 
