--- a/start.html
+++ b/start.html
@@ -112,7 +112,7 @@
                 }
             },
             jobOffer: {
-                Image: 'pics/alley.jpg',
+                Image: 'alley.jpg',
                 text: 'You nod, and move closer to the man. He\'s wearing a long coat, with the collar turned up to block the view of his face. His voice is gruff as he speaks. "I\'ve got a job for you. Are you in? I\'ll make it worth your while..."',
                 choices: {
                     "Give me more details": "acceptJob",
@@ -139,7 +139,7 @@
                 }
             },
             exploreCity: {
-                Image: 'pics/road.jpg',
+                Image: 'road.jpg',
                 text: 'You wander the city for hours, stopping at every programmers shop you can find, but nobodies hiring. After hours of searching, you decide to head home, but as you do, you see a group of people standing around, looking at their tablets and talking excitedly.',
                 choices: {
                     Investigate: "invest",
@@ -172,7 +172,7 @@
                 }
             },
             love: {
-                Image: 'pics/tatoo.jpg',
+                Image: 'tatoo.jpg',
                 text: 'As you approach your apartment (you live on the 256th floor of a rundown building), a woman steps out in front of you, lifting her arm to wave down a taxi. You move to go around her, but you see she has a tatoo on her forearm. Not just any tatoo, a tatoo for the Code Breakers. The best hacking group in the world. They were single handly responsible for the fall of the corrupt government, and the rise of the corporations. They are now considered a terrorist organization, and joining is punishable by death.',
                 choices: {
                     "Talk to her": "Meet",
@@ -187,7 +187,7 @@
                 }
             },
             Meet: {
-                Image: 'pics/woman.jpg',
+                Image: 'woman.jpg',
                 text: 'You step forward quickly, and whisper to the woman, "I know what you do." She freezes, hand still in the air. "What do you want?" She asked coldly, as her arm dropped. She looks pissed off. She glances around while waiting for you to respond, as if watching for someone.',
                 choices: {
                     "To join": "Welcome",
@@ -208,7 +208,7 @@
                 }
             },
             desk: {
-                Image: 'pics/Hall.jpg',
+                Image: 'Hall.jpg',
                 text: 'You walk up to the front door, covered in graffiti and almost falling apart, and swipe the key card on the nearby scanner. The door opens, and you walk in. The inside looks clean, but old. There must be some sort of cleaning bot that keeps everything running. But, there isn\'t anybody visible, so you walk to the elevators, and go up to the floor that was recomended. The elevator opens to a hallway, with a single wall computer at the end of it, again the computer looks in perfect condition. You walk over, and begin your magic. Do you want to be careful, or quick?',
                 choices: {
                     "Careful": "careful",
@@ -216,7 +216,7 @@
                 }
             },
             sneaky: {
-                Image: 'pics/Hall.jpg',
+                Image: 'Hall.jpg',
                 text: 'You walk around the building, and find a side door, or what used to be a side door. You swipe the key card, and walk in. The inside looks clean, but old. There must be some sort of cleaning bot that keeps everything running. But, there isn\'t anybody visible, so you walk to the elevators, and go up to the floor that was recomended. The elevator opens to a hallway, with a single wall computer at the end of it, again the computer looks in perfect condition. You walk over, and begin your magic. Do you want to be careful, or quick?',
                 choices: {
                     "Careful": "careful",
@@ -313,7 +313,7 @@
                 }
             },
             quick: {
-                Image: 'pics/cyborg.png',
+                Image: 'cyborg.png',
                 text: 'Speed is the best method, Someone could show up any second. You quickly hack into the system, You start the file transfer, when an alarm sounds. You freeze, and then run. You make it to the stairs, knowing they would have locked the elevator. But the door doesn\'t open. You hear clapping, slow, sarcastic clapping. You turn around slowly, and see a cyborg standing there.',
                 choices: {
                     "Try the door again": "door",
@@ -321,7 +321,7 @@
                 }
             },
             test: {
-                Image:'pics/building.jpg',
+                Image:'building.jpg',
                 text: 'You watch the lady disappear into the crowds, vanishing before you can open your mouth. Looking at the building she brought you to, your mouth drops open. This is none other than the headquarters of Walzin, The biggest company in the world. Their building was over ten thousand stories tall, and was supposed to have the best security. This would be no easy task. Not only were they the main supplier of everything you could ever want, they were also head of the IPCG, the Interplanetary Corporations group, the group that was in charge of the entire world!',
                 choices: {
                     "I got this": "walzin",
@@ -428,7 +428,7 @@
                 }
             },
             act: {
-                Image:"pics/bot.jpg",
+                Image:"bot.jpg",
                 text: 'You enter the front door, and walk past the receptionist robot. She looks at you, and her mouth glows like she\'s about to say something, but you just keep moving, and she looks away. Sweating a little, you head to the fire stairs, and start walking. You need to find a computer, as soon as possible.',
                 choices: {
                     "Go up a couple of floors": "10",
@@ -436,7 +436,7 @@
                 }
             },
             key: {
-                Image: "pics/lobby.jpg",
+                Image: "lobby.jpg",
                 text: 'You enter the building, just as a big group of people go through the front door. You join the back of the group, and move along with them, pretending to belong. The lobby is massive, and you can see dozens of people walking around.',
                 choices: {
                     "Join the group": "join",
